# bevy_hirundo

./: CLAUDE.md  Cargo.toml  README.md  SIMPLIFIED_API.md  new_file_structure.md  wesl.toml
.claude/: settings.local.json
assets/shaders/: n.wgsl  vfx.wgsl  vfx_broadcast.wgsl
src/: broadcast_example.rs  broadcast_material.rs  camera.rs  lib.rs  main.rs  preludes.rs  render.rs  systems.rs  vfx.rs
src/components/: markers.rs  mod.rs  sprite_index.rs  vfx.rs
src/effects/: alpha.rs  builder.rs  color.rs  effect_stack.rs  envelope.rs  lifetime.rs  mod.rs  phase.rs  spatial.rs  wave.rs
src/hooks/: dehydrate.rs  hydrate.rs  mod.rs
src/input/: broadcast_controls.rs  mod.rs  unique_controls.rs  vfx_controls.rs
src/materials/: broadcast_material.rs  mod.rs  vfx_material.rs
src/resources/: atlas_config.rs  effect_storage.rs  material_handles.rs  mesh_tag_allocator.rs  mod.rs  vfx_registry.rs
src/spawners/: broadcast_spawner.rs  mod.rs  unique_spawner.rs  vfx_spawner.rs
src/systems/: broadcast_update.rs  mod.rs  pruning.rs  setup.rs  storage.rs  sync.rs
