[package]
name = "bevy_hirundo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking", "pan_camera", "debug"] }
bracket-lib = "0.8.7"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "display", "from"] }
bevy_ecs_tilemap = "0.17.0"
glam = "0.30.9"
rand = "0.9.2"
enum-map = "2.7.3"
bytemuck = "1.24.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
